--- a/src/app/components/footer.module.css
+++ b/src/app/components/footer.module.css
@@ -22,10 +22,9 @@
 }
 
 .logoIcon {
-  background-color: var(--color-white);
+  /* background-color: var(--color-white); */
   padding: var(--spacing-2);
   border-radius: var(--border-radius);
-  color: var(--color-purple-600);
 }
 
 .logoText {
